fixed spacing added hyperlinks

--- a/css/alireza.css
+++ b/css/alireza.css
@@ -405,3 +405,12 @@ footer {
   left: 0;
   cursor: default;
 }
+
+.row {
+  margin-bottom: 10px;
+}
+
+.col-lg-4,
+.col-lg-8 {
+  margin-bottom: 20px;
+}
